[gd_scene load_steps=10 format=2]

[ext_resource path="res://GaryScenes/MainMenu/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Asset Scenes/SlipspaceBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/World.tscn" type="PackedScene" id=4]
[ext_resource path="res://GaryScenes/PlayerHUD/PlayerHUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://GaryScenes/BiggerWorld/BiggerWorld.gd" type="Script" id=6]
[ext_resource path="res://GaryScenes/PlayerHUD/TextDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/pixel.png" type="Texture" id=8]
[ext_resource path="res://GaryScenes/BiggerWorld/MouseCursor.tscn" type="PackedScene" id=9]

[node name="BiggerWorld" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
gameplayTime = 60.0
wonText = "\"We've done it!\" your space first mate shouts. His joyous roar is joined by the rest of your space crew.
\"Y'know what lads!\", you shout out \"It's time for us to get knackered! TO THE SPACE BAR!\"

+1000 Score for surviving"
lostText = "And so your space crew's journey ends. You had a good run, until you failed to slip away.

You survived the onslaught for %s seconds."

[node name="SlipspaceBackground" parent="." instance=ExtResource( 2 )]
_acceptsInput = false

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 93, 198 )

[node name="World" parent="." instance=ExtResource( 4 )]

[node name="HUD" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BlackScreen" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="EndingText" parent="CanvasLayer" instance=ExtResource( 7 )]
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 0.5
hiddenVector = Vector2( 1, -1 )

[node name="MouseCursor" parent="CanvasLayer" instance=ExtResource( 9 )]

[connection signal="OnPlayedDied" from="Player" to="." method="_on_Player_OnPlayedDied"]
[connection signal="OnPlayerHealthArmorChanged" from="Player" to="HUD" method="OnPlayerHealthChanged"]
[connection signal="OnScoreGained" from="World" to="HUD" method="OnScoreGained"]
[connection signal="OnTimerEnded" from="World" to="." method="_on_World_OnTimerEnded"]
[connection signal="OnStartGame" from="CanvasLayer/MainMenu" to="." method="_on_MainMenu_OnStartGame"]
